--- a/src/main/resources/spring-frontend/index.html
+++ b/src/main/resources/spring-frontend/index.html
@@ -326,7 +326,7 @@
             </li>
             <li class="menu-item"><a class="menu-link" href="/books/popular.html">Популярное</a>
             </li>
-            <li class="menu-item"><a class="menu-link" href="/authors/index.html">Авторы</a>
+            <li class="menu-item"><a class="menu-link" href="/authors/index.html" th:href="@{/authors}">Авторы</a>
             </li>
           </ul>
         </div>
