--- a/src/main/resources/spring-frontend/index.html
+++ b/src/main/resources/spring-frontend/index.html
@@ -58,7 +58,8 @@
                       </strong>
                       <div class="Card-description" th:text="${book.author}">Кондратенко Валерий Петрович
                       </div>
-                      <div class="Card-cost"><span class="Card-priceOld" th:text="${book.priceOld}">₽300.00</span><span class="Card-price" th:text="${book.price}">₽190.00</span>
+                      <div class="Card-cost"><span class="Card-priceOld" th:text="${book.priceOld}">₽300.00</span><span
+                              class="Card-price" th:text="${book.price}">₽190.00</span>
                       </div>
                     </div>
                   </div>
@@ -80,17 +81,18 @@
           </div>
           <div class="Slider Slider_carousel">
             <div class="Slider-box Cards" data-load="recent" data-loadoffset="8" data-loadlimit="20">
-              <div class="Slider-item">
+              <div class="Slider-item" th:each="book : ${recentBooks}">
                 <div class="Slider-content">
                   <div class="Card"><a class="Card-picture" href="/books/slug.html"><img src="/assets/img/content/main/card.jpg" alt="card.jpg"/>
                       <div class="Card-sale">30% скидка
                       </div></a>
                     <div class="Card-content">
-                      <strong class="Card-title"><a href="/books/slug.html">Техника</a>
+                      <strong class="Card-title"><a href="/books/slug.html" th:text="${book.title}">Техника</a>
                       </strong>
-                      <div class="Card-description">Кондратенко Александр Петрович
+                      <div class="Card-description" th:text="${book.author}">Кондратенко Александр Петрович
                       </div>
-                      <div class="Card-cost"><span class="Card-priceOld">₽500.00</span><span class="Card-price">₽390.00</span>
+                      <div class="Card-cost"><span class="Card-priceOld" th:text="${book.priceOld}">₽500.00</span><span
+                              class="Card-price" th:text="${book.price}">₽390.00</span>
                       </div>
                     </div>
                   </div>
@@ -112,7 +114,7 @@
           </div>
           <div class="Slider Slider_carousel">
             <div class="Slider-box Cards" data-load="popular" data-loadoffset="8" data-loadlimit="20">
-              <div class="Slider-item">
+              <div class="Slider-item" th:each="book : ${popularBooks}">
                 <div class="Slider-content">
                   <div class="Card"><a class="Card-picture" href="/books/slug.html"><img src="/assets/img/content/main/card.jpg" alt="card.jpg"/>
                       <div class="Card-sale">30% скидка
@@ -120,11 +122,12 @@
                       <div class="Card-ribbon"><span class="Card-ribbonText">Бестселлер</span>
                       </div></a>
                     <div class="Card-content">
-                      <strong class="Card-title"><a href="/books/slug.html">Техника</a>
+                      <strong class="Card-title"><a href="/books/slug.html" th:text="${book.title}">Техника</a>
                       </strong>
-                      <div class="Card-description">Кондратенко Александр Петрович
+                      <div class="Card-description" th:text="${book.author}">Кондратенко Александр Петрович
                       </div>
-                      <div class="Card-cost"><span class="Card-priceOld">₽500.00</span><span class="Card-price">₽390.00</span>
+                      <div class="Card-cost"><span class="Card-priceOld" th:text="${book.priceOld}">₽500.00</span><span
+                              class="Card-price" th:text="${book.price}">₽390.00</span>
                       </div>
                     </div>
                   </div>
