--- a/src/main/resources/spring-frontend/books/recent.html
+++ b/src/main/resources/spring-frontend/books/recent.html
@@ -9,7 +9,7 @@
 <html class="ie9" lang="ru">
 <![endif]-->
 <!--[if gt IE 9]><!-->
-<html lang="ru"> <!--<![endif]-->
+<html lang="ru" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>Тут название страницы написать</title>
     <meta name="description" content="Описание страницы">
