--- a/src/main/resources/spring-frontend/books/recent.html
+++ b/src/main/resources/spring-frontend/books/recent.html
@@ -381,5 +381,6 @@ p.error-browser
 </div>
 <footer th:replace="~{fragments/footer_fragment :: footFragment}"></footer>
 <script src="/assets/plg/jQuery/jquery-3.5.1.min.js"></script>
+<script defer src="/assets/js/localize.js?v=64223516"></script>
 </body>
 </html>
