--- a/src/main/resources/spring-frontend/faq.html
+++ b/src/main/resources/spring-frontend/faq.html
@@ -45,7 +45,8 @@ p.error-browser
     <div class="wrap">
         <main class="Middle-main">
             <ul class="breadcrumbs">
-                <li class="breadcrumbs-item"><a href="/index.html">Главная</a>
+                <li class="breadcrumbs-item"><a
+                        href="/index.html">Главная</a>
                 </li>
                 <li class="breadcrumbs-item breadcrumbs-item_current"><span>Помощь</span>
                 </li>
@@ -122,5 +123,6 @@ p.error-browser
 </div>
 <footer th:replace="~{fragments/footer_fragment :: footFragment}"></footer>
 <script src="/assets/plg/jQuery/jquery-3.5.1.min.js"></script>
+<script defer src="/assets/js/localize.js?v=64223516"></script>
 </body>
 </html>
