--- a/src/main/resources/spring-frontend/genres/index.html
+++ b/src/main/resources/spring-frontend/genres/index.html
@@ -43,7 +43,7 @@
   <div class="Middle">
     <div class="wrap">
       <main class="Middle-main">
-        <h1 class="Middle-title">Жанры
+        <h1 class="Middle-title" th:text="#{topbar.genres}">Жанры
         </h1>
         <div class="Section">
           <div class="Tags Tags_genres">
@@ -196,6 +196,7 @@
   </div>
   <footer th:replace ="~{fragments/footer_fragment :: footFragment}"></footer>
   <script src="/assets/plg/jQuery/jquery-3.5.1.min.js"></script>
+   <script defer src="/assets/js/localize.js?v=64223516"></script>
   <!--+menu(-->
   <!--    'Это раз',-->
   <!--    'Это два',-->
