--- a/src/main/resources/spring-frontend/index.html
+++ b/src/main/resources/spring-frontend/index.html
@@ -1,14 +1,11 @@
 
 <!--END-->
 <!--END--><!DOCTYPE html><!--[if IE 7]>
-<html class="ie7" lang="ru">
-<![endif]-->
+<html class="ie7" lang="ru" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org"><![endif]-->
 <!--[if IE 8]>
-<html class="ie8" lang="ru">
-<![endif]-->
+<html class="ie8" lang="ru" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org"><![endif]-->
 <!--[if IE 9]>
-<html class="ie9" lang="ru">
-<![endif]-->
+<html class="ie9" lang="ru" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org"><![endif]-->
 <html lang="ru" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 <head>
   <title>Тут название страницы написать</title>
@@ -251,6 +248,7 @@
   </div>
   <footer th:replace ="~{fragments/footer_fragment :: footFragment}"></footer>
   <script src="/assets/plg/jQuery/jquery-3.5.1.min.js"></script>
+  <script defer src="/assets/js/localize.js?v=64223516"></script>
   <!--+menu(-->
   <!--    'Это раз',-->
   <!--    'Это два',-->
