--- a/src/main/resources/spring-frontend/search/index.html
+++ b/src/main/resources/spring-frontend/search/index.html
@@ -43,13 +43,14 @@
   <div class="Middle Middle_search">
     <div class="wrap">
       <main class="Middle-main">
-        <h1 class="Middle-title">Поиск
+        <h1 class="Middle-title" th:text="#{header.searchButton}">Поиск
         </h1>
         <div class="Section">
           <div class="search">
             <form class="form form_search" action="#" method="post" data-searchlimit="20">
               <input class="search-input" id="querypage" name="querypage" type="text" placeholder="Search over 30 million book titles" value="Техника"/>
-              <button class="search-button" type="submit" name="searchpage" id="searchpage">Поиск
+              <button class="search-button" type="submit" name="searchpage" id="searchpage"
+              th:text="#{header.searchButton}">Поиск
               </button>
             </form>
           </div>
