localize footer content

--- a/src/main/resources/spring-frontend/about.html
+++ b/src/main/resources/spring-frontend/about.html
@@ -47,10 +47,10 @@ p.error-browser
             <ul class="breadcrumbs">
                 <li class="breadcrumbs-item"><a href="/index.html">Главная</a>
                 </li>
-                <li class="breadcrumbs-item breadcrumbs-item_current"><span>О компании</span>
+                <li class="breadcrumbs-item breadcrumbs-item_current"><span th:text="#{footer.about}">О компании</span>
                 </li>
             </ul>
-            <h1 class="Middle-title">О компании
+            <h1 class="Middle-title" th:text="#{footer.about}">О компании
             </h1>
             <article class="Article">
                 <div class="sdf">
