--- a/src/main/resources/spring-frontend/signin.html
+++ b/src/main/resources/spring-frontend/signin.html
@@ -114,7 +114,7 @@ p.error-browser
                         </div>
                         <div class="form-group form-group_center">
                             <button class="btn btn_primary form-btn" type="button" name="toComeInMail" id="toComeInMail"
-                                    data-send="">Войти
+                                    data-send="" th:text="#{footer.login}">Войти
                             </button>
                         </div>
                     </div>
