--- a/src/main/resources/spring-frontend/documents/index.html
+++ b/src/main/resources/spring-frontend/documents/index.html
@@ -43,7 +43,7 @@
   <div class="Middle">
     <div class="wrap">
       <main class="Middle-main">
-        <h1 class="Middle-title">Документы
+        <h1 class="Middle-title" th:text="#{footer.documents}">Документы
         </h1>
         <div class="Section">
           <div class="Documents">
