--- a/src/main/resources/spring-frontend/faq.html
+++ b/src/main/resources/spring-frontend/faq.html
@@ -48,10 +48,11 @@ p.error-browser
                 <li class="breadcrumbs-item"><a
                         href="/index.html">Главная</a>
                 </li>
-                <li class="breadcrumbs-item breadcrumbs-item_current"><span>Помощь</span>
+                <li class="breadcrumbs-item breadcrumbs-item_current">
+                    <span th:text="#{footer.help}">Помощь</span>
                 </li>
             </ul>
-            <h1 class="Middle-title">Помощь
+            <h1 class="Middle-title" th:text="#{footer.help}">Помощь
             </h1>
             <div class="FAQ">
                 <strong class="FAQ-title">Наиболее частые вопросы:
