localize main content

--- a/src/main/resources/spring-frontend/books/recent.html
+++ b/src/main/resources/spring-frontend/books/recent.html
@@ -49,12 +49,12 @@ p.error-browser
                 </li>
                 <li class="breadcrumbs-item"><a href="/genres/index.html">Книги</a>
                 </li>
-                <li class="breadcrumbs-item breadcrumbs-item_current"><span>Новинки</span>
+                <li class="breadcrumbs-item breadcrumbs-item_current" th:text="#{main.news}"><span>Новинки</span>
                 </li>
             </ul>
             <div class="Section">
                 <div class="Section-header">
-                    <h1 class="Section-title">Новинки
+                    <h1 class="Section-title" th:text="#{main.news}">Новинки
                     </h1>
                     <form class="form form_inline Section-header-form" action="#" method="post">
                         <div class="form-group">
