--- a/src/main/resources/spring-frontend/books/popular.html
+++ b/src/main/resources/spring-frontend/books/popular.html
@@ -49,12 +49,12 @@ p.error-browser
                 </li>
                 <li class="breadcrumbs-item"><a href="/genres/index.html">Книги</a>
                 </li>
-                <li class="breadcrumbs-item breadcrumbs-item_current"><span>Популярное</span>
+                <li class="breadcrumbs-item breadcrumbs-item_current" th:text="#{main.popular}"><span>Популярное</span>
                 </li>
             </ul>
             <div class="Section">
                 <div class="Section-header">
-                    <h1 class="Section-title">Популярное
+                    <h1 class="Section-title" th:text="#{main.popular}">Популярное
                     </h1>
                 </div>
                 <div class="Cards Cards_refresh">
