--- a/src/main/resources/spring-frontend/index.html
+++ b/src/main/resources/spring-frontend/index.html
@@ -42,7 +42,7 @@
       <main class="Middle-main">
         <div class="Section">
           <div class="Section-header">
-            <h2 class="Section-title">Рекомендуемое
+            <h2 class="Section-title" th:text="#{main.recommended}">Рекомендуемое
             </h2>
           </div>
           <div class="Slider Slider_carousel">
@@ -73,7 +73,7 @@
             </div>
           </div>
           <div class="Section-header">
-            <h2 class="Section-title">Новинки
+            <h2 class="Section-title" th:text="#{main.news}">Новинки
             </h2>
           </div>
           <div class="Slider Slider_carousel">
@@ -106,7 +106,7 @@
             </div>
           </div>
           <div class="Section-header">
-            <h2 class="Section-title">Популярное
+            <h2 class="Section-title" th:text="#{main.popular}">Популярное
             </h2>
           </div>
           <div class="Slider Slider_carousel">
@@ -141,7 +141,7 @@
             </div>
           </div>
         </div>
-        <h2 class="Middle-title">Книги по тегам
+        <h2 class="Middle-title" th:text="#{main.tags}">Книги по тегам
         </h2>
         <div class="Tags" id="tags">
           <div class="Tag Tag_xs"><a href="/tags/index.html">современная литература</a>
