--- a/src/main/resources/spring-frontend/faq.html
+++ b/src/main/resources/spring-frontend/faq.html
@@ -46,7 +46,7 @@ p.error-browser
         <main class="Middle-main">
             <ul class="breadcrumbs">
                 <li class="breadcrumbs-item"><a
-                        href="/index.html">Главная</a>
+                        href="/index.html" th:text="#{path.main}">Главная</a>
                 </li>
                 <li class="breadcrumbs-item breadcrumbs-item_current">
                     <span th:text="#{footer.help}">Помощь</span>
