--- a/src/main/resources/spring-frontend/postponed.html
+++ b/src/main/resources/spring-frontend/postponed.html
@@ -44,7 +44,7 @@ p.error-browser
 <div class="Middle">
     <div class="wrap">
         <main class="Middle-main">
-            <h1 class="Middle-title">Отложенное
+            <h1 class="Middle-title" th:text="#{postponed}">Отложенное
             </h1>
             <form class="form Cart Cart_postponed" action="#" method="post">
                 <div class="Cart-product" th:each="book : ${postponedBooks}">
@@ -108,20 +108,20 @@ p.error-browser
                                         <button class="btn btn_primary btn_outline" data-sendstatus="CART"
                                                 data-bookid="[1133]"><span class="btn-icon"><img
                                                 src="/assets/img/icons/shopping-basket.svg" alt="shopping-basket.svg"/></span><span
-                                                class="btn-content">Купить</span>
+                                                class="btn-content" th:text="#{button.buy}">Купить</span>
                                         </button>
                                     </div>
                                     <div class="Cart-btn">
                                         <button class="btn btn_danger btn_outline" data-sendstatus="UNLINK"
                                                 data-bookid="[1133]"><span class="btn-icon"><img
                                                 src="/assets/img/icons/trash.svg" alt="trash.svg"/></span><span
-                                                class="btn-content">Удалить</span>
+                                                class="btn-content" th:text="#{button.delete}">Удалить</span>
                                         </button>
                                     </div>
                                 </div>
                             </div>
                             <div class="Cart-block Cart-block_price">
-                                <div class="Cart-priceTitle">Цена:
+                                <div class="Cart-priceTitle" th:text="#{price}">Цена:
                                 </div>
                                 <div class="Cart-price Cart-price_old" th:text="${book.priceOld}">150 р.
                                 </div>
@@ -138,7 +138,7 @@ p.error-browser
                     </div>
                     <div class="Cart-block">
                         <button class="btn btn_success btn_md Cart-buyAll" data-sendstatus="CART"
-                                data-bookid="[1111, 1122, 1133]">Купить все
+                                data-bookid="[1111, 1122, 1133]" th:text="#{button.buyAll}">Купить все
                         </button>
                     </div>
                 </div>
