--- a/src/main/resources/spring-frontend/about.html
+++ b/src/main/resources/spring-frontend/about.html
@@ -45,7 +45,7 @@ p.error-browser
     <div class="wrap">
         <main class="Middle-main">
             <ul class="breadcrumbs">
-                <li class="breadcrumbs-item"><a href="/index.html">Главная</a>
+                <li class="breadcrumbs-item"><a href="/index.html" th:text="#{topbar.main}">Главная</a>
                 </li>
                 <li class="breadcrumbs-item breadcrumbs-item_current"><span th:text="#{footer.about}">О компании</span>
                 </li>
