--- a/src/main/resources/spring-frontend/books/popular.html
+++ b/src/main/resources/spring-frontend/books/popular.html
@@ -45,9 +45,9 @@ p.error-browser
     <div class="wrap">
         <main class="Middle-main">
             <ul class="breadcrumbs">
-                <li class="breadcrumbs-item"><a href="/index.html">Главная</a>
+                <li class="breadcrumbs-item"><a href="/index.html" th:text="#{topbar.main}">Главная</a>
                 </li>
-                <li class="breadcrumbs-item"><a href="/genres/index.html">Книги</a>
+                <li class="breadcrumbs-item"><a href="/genres/index.html" th:text="#{path.books}">Книги</a>
                 </li>
                 <li class="breadcrumbs-item breadcrumbs-item_current" th:text="#{main.popular}"><span>Популярное</span>
                 </li>
@@ -354,7 +354,8 @@ p.error-browser
                     </div>
                     <div class="Cards-footer Cards-footer_center"><a class="btn btn_primary" href="#"
                                                                      data-refreshshow="popular" data-refreshoffset="20"
-                                                                     data-refreshlimit="20">Показать еще</a>
+                                                                     data-refreshlimit="20" th:text="#{button.more}">Показать
+                        еще</a>
                     </div>
                 </div>
             </div>
