--- a/src/main/resources/spring-frontend/contacts.html
+++ b/src/main/resources/spring-frontend/contacts.html
@@ -51,7 +51,7 @@ p.error-browser
     <div class="wrap">
         <main class="Middle-main">
             <ul class="breadcrumbs">
-                <li class="breadcrumbs-item"><a href="/index.html">Главная</a>
+                <li class="breadcrumbs-item"><a href="/index.html" th:text="#{topbar.main}">Главная</a>
                 </li>
                 <li class="breadcrumbs-item breadcrumbs-item_current" th:text="#{footer.contacts}"><span>Контакты</span>
                 </li>
