--- a/src/main/resources/spring-frontend/contacts.html
+++ b/src/main/resources/spring-frontend/contacts.html
@@ -62,7 +62,7 @@ p.error-browser
                         <h2 th:text="#{footer.contacts}">Контакты
                         </h2>
                         <div class="Contacts-prop">
-                            <strong class="Contacts-propTitle">Телефон:
+                            <strong class="Contacts-propTitle" th:text="#{phone}">Телефон:
                             </strong><span class="Contacts-propContent">8 (800) 484-48-48</span>
                         </div>
                         <div class="Contacts-prop">
