--- a/src/main/resources/spring-frontend/signin.html
+++ b/src/main/resources/spring-frontend/signin.html
@@ -44,7 +44,7 @@ p.error-browser
 <div class="Middle Middle_form">
     <div class="Middle-top">
         <div class="wrap">
-            <h1 class="Middle-title">Вход
+            <h1 class="Middle-title" th:text="#{login}">Вход
             </h1>
         </div>
     </div>
@@ -54,7 +54,7 @@ p.error-browser
                 <div class="Login-ins">
                     <div class="Login-step">
                         <div class="form-group">
-                            <label class="form-label Login-title">Введите e-mail или телефон
+                            <label class="form-label Login-title" th:text="#{login.title}">Введите e-mail или телефон
                             </label>
                         </div>
                         <div class="form-group">
@@ -62,7 +62,7 @@ p.error-browser
                                 <div class="row-block">
                                     <label class="toggle Login-type">
                                         <input type="radio" name="typeauth" value="phonetype" checked="checked"/><span
-                                            class="toggle-box"></span><span class="toggle-text">Телефон</span>
+                                            class="toggle-box"></span><span class="toggle-text" th:text="#{phone}">Телефон</span>
                                     </label>
                                 </div>
                                 <div class="row-block">
@@ -75,36 +75,44 @@ p.error-browser
                         </div>
                         <div class="form-group">
                             <input class="form-input form-input_phone" id="phone" name="phone" type="text"
-                                   placeholder="Введите телефон" data-mask="+7 (999) 999-99-99"
+                                   placeholder="Введите телефон"
+                                   th:placeholder="#{phone.placeholder}"
+                                   data-mask="+7 (999) 999-99-99"
                                    data-validate="require"/>
                             <input class="form-input form-input_mail" id="mail" name="mail" type="text"
-                                   placeholder="Введите e-mail" data-validate="mail require"/>
+                                   placeholder="Введите e-mail"
+                                   th:placeholder="#{email.placeholder}"
+                                   data-validate="mail require"/>
                         </div>
                         <div class="form-group form-group_center">
                             <button class="btn btn_primary form-btn" type="button" name="sendauth" id="sendauth"
-                                    data-type="phone" data-send="">Далее
+                                    data-type="phone" data-send="" th:text="#{next}">Далее
                             </button>
                         </div>
                     </div>
                     <div class="Login-step Login-step_hide" data-type="phone">
                         <div class="form-group">
-                            <label class="form-label Login-title">На&nbsp;Ваш телефон отправлено сообщение с&nbsp;кодом
+                            <label class="form-label Login-title" th:text="#{register.phone}">На Ваш телефон отправлено
+                                сообщение с&nbsp;кодом
                                 для входа. Введите его:
                             </label>
                         </div>
                         <div class="form-group form-group_key">
                             <input class="form-input" id="phonecode" name="phonecode" type="text" placeholder="Код"
+                                   th:placeholder="#{register.code}"
                                    data-validate="key require" data-mask="999 999"/>
                         </div>
                         <div class="form-group form-group_center">
                             <button class="btn btn_primary form-btn" type="button" name="toComeInPhone"
-                                    id="toComeInPhone" data-send="">Войти
+                                    id="toComeInPhone" data-send=""
+                                    th:text="#{footer.login}">Войти
                             </button>
                         </div>
                     </div>
                     <div class="Login-step Login-step_hide" data-type="mail">
                         <div class="form-group">
-                            <label class="form-label Login-title">На&nbsp;Ваш e-mail отправлена ссылка для входа и&nbsp;код.
+                            <label class="form-label Login-title" th:text="#{register.email}">На&nbsp;Ваш e-mail
+                                отправлена ссылка для входа и&nbsp;код.
                                 Перейдите по&nbsp;ссылке или введите код ниже:
                             </label>
                         </div>
@@ -118,7 +126,8 @@ p.error-browser
                             </button>
                         </div>
                     </div>
-                    <div class="form-group form-group_center"><a class="Login-reg" href="/signup.html">Зарегистрироваться</a>
+                    <div class="form-group form-group_center"><a class="Login-reg" href="/signup.html"
+                                                                 th:text="#{register}">Зарегистрироваться</a>
                     </div>
                 </div>
             </form>
