--- a/src/main/resources/spring-frontend/contacts.html
+++ b/src/main/resources/spring-frontend/contacts.html
@@ -70,34 +70,43 @@ p.error-browser
                             </strong><span class="Contacts-propContent">test@test.ru</span>
                         </div>
                         <div class="Contacts-prop">
-                            <strong class="Contacts-propTitle">Телеграм-бот:
+                            <strong class="Contacts-propTitle" th:text="#{telegram}">Телеграм-бот:
                             </strong><span class="Contacts-propContent">@testBookShop</span>
                         </div>
                     </div>
                     <div class="row-block">
                         <div class="Contacts-form">
-                            <h2>Напишите нам:
+                            <h2 th:text="#{form.ask}">Напишите нам:
                             </h2>
                             <form class="form" action="#" method="post">
                                 <div class="form-group">
                                     <input class="form-input" id="name" name="name" type="text"
-                                           placeholder="Введите Имя" data-validate="require"/>
+                                           placeholder="Введите Имя"
+                                           th:placeholder="#{form.name}"
+                                           data-validate="require"/>
                                 </div>
                                 <div class="form-group">
                                     <input class="form-input form-input_mail" id="mail" name="mail" type="text"
-                                           placeholder="Введите e-mail" data-validate="mail require"/>
+                                           placeholder="Введите e-mail"
+                                           th:placeholder="#{form.email}"
+                                           data-validate="mail require"/>
                                 </div>
                                 <div class="form-group">
                                     <input class="form-input" id="topic" name="topic" type="text"
-                                           placeholder="Введите тему" data-validate="require"/>
+                                           placeholder="Введите тему"
+                                           th:placeholder="#{form.topic}"
+                                           data-validate="require"/>
                                 </div>
                                 <div class="form-group">
                                     <textarea class="form-textarea Contacts-message" name="message" id="message"
-                                              placeholder="Введите сообщение" data-validate="require"></textarea>
+                                              placeholder="Введите сообщение"
+                                              th:placeholder="#{form.message}"
+                                              data-validate="require"></textarea>
                                 </div>
                                 <div class="form-group">
                                     <button class="btn btn_primary form-btn" type="submit" name="sendMessage"
-                                            id="sendMessage">Отправить
+                                            id="sendMessage"
+                                            th:text="#{button.send}">>Отправить
                                     </button>
                                 </div>
                             </form>
