--- a/src/main/resources/spring-frontend/books/recent.html
+++ b/src/main/resources/spring-frontend/books/recent.html
@@ -47,18 +47,18 @@ p.error-browser
             <ul class="breadcrumbs">
                 <li class="breadcrumbs-item"><a href="/index.html" th:text="#{topbar.main}">Главная</a>
                 </li>
-                <li class="breadcrumbs-item"><a href="/genres/index.html" th:text="#{path.books}">Книги</a>
+                <li class="breadcrumbs-item"><a href="/genres/index.html" th:text="#{main.books}">Книги</a>
                 </li>
-                <li class="breadcrumbs-item breadcrumbs-item_current" th:text="#{main.news}"><span>Новинки</span>
+                <li class="breadcrumbs-item breadcrumbs-item_current" th:text="#{topbar.news}"><span>Новинки</span>
                 </li>
             </ul>
             <div class="Section">
                 <div class="Section-header">
-                    <h1 class="Section-title" th:text="#{main.news}">Новинки
+                    <h1 class="Section-title" th:text="#{topbar.news}">Новинки
                     </h1>
                     <form class="form form_inline Section-header-form" action="#" method="post">
                         <div class="form-group">
-                            <label class="form-label">с
+                            <label class="form-label" th:text="#{recent.from}">с
                             </label>
                             <input class="form-input form-input_date form-input_date_uninit" id="fromdaterecent"
                                    name="fromdaterecent" type="text" placeholder="Дата" data-refreshoffset="20"
@@ -66,7 +66,7 @@ p.error-browser
                                    autocomplete="off"/>
                         </div>
                         <div class="form-group">
-                            <label class="form-label">по
+                            <label class="form-label" th:text="#{recent.to}">по
                             </label>
                             <input class="form-input form-input_date form-input_date_uninit" id="enddaterecent"
                                    name="enddaterecent" type="text" placeholder="Дата" data-refreshoffset="20"
