--- a/src/main/resources/spring-frontend/index.html
+++ b/src/main/resources/spring-frontend/index.html
@@ -73,7 +73,7 @@
             </div>
           </div>
           <div class="Section-header">
-            <h2 class="Section-title" th:text="#{main.news}">Новинки
+            <h2 class="Section-title" th:text="#{topbar.news}">Новинки
             </h2>
           </div>
           <div class="Slider Slider_carousel">
@@ -106,7 +106,7 @@
             </div>
           </div>
           <div class="Section-header">
-            <h2 class="Section-title" th:text="#{main.popular}">Популярное
+            <h2 class="Section-title" th:text="#{topbar.popular}">Популярное
             </h2>
           </div>
           <div class="Slider Slider_carousel">
